--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
+    //AppCompat
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    //Koil image download
+    implementation("io.coil-kt:coil:0.9.2")
+
     //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -65,5 +71,5 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
-    
+
 }
