--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,16 +56,17 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     //AppCompat
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
     //Koil image download
     implementation("io.coil-kt:coil:0.9.2")
 
-    //Dagger
-    implementation 'com.google.dagger:dagger:2.30.1'
-    kapt 'com.google.dagger:dagger-compiler:2.30.1'
+
+    //Koin for Android
+    implementation 'org.koin:koin-android:2.0.1'
+    implementation 'org.koin:koin-android-viewmodel:2.0.1'
 
     //Test
     testImplementation 'junit:junit:4.12'
