Урок 4. Picasso/Glide, Room 2. Создайте экран с описанием слова. Используйте Picasso или Glide для загрузки изображения.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 
     //AndroidX
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     //Design
     //You should not use the com.android.support and com.google.android.material dependencies in your app at the same time
@@ -60,13 +62,25 @@ dependencies {
     //AppCompat
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
+
+
+    //Download images
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
     //Koil image download
     implementation("io.coil-kt:coil:0.9.2")
-
 
     //Koin for Android
     implementation 'org.koin:koin-android:2.0.1'
     implementation 'org.koin:koin-android-viewmodel:2.0.1'
+
+    //Room
+    implementation 'androidx.room:room-runtime:2.2.0-alpha01'
+    kapt 'androidx.room:room-compiler:2.2.0-alpha01'
+    implementation 'androidx.room:room-ktx:2.2.0-alpha01'
 
     //Test
     testImplementation 'junit:junit:4.12'
