--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,16 +6,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
-
+    compileSdkVersion Config.compile_sdk
     defaultConfig {
-        applicationId "net.svishch.android.dictionary"
-        minSdkVersion 29
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
+        applicationId Config.application_id
+        minSdkVersion Config.min_sdk
+        targetSdkVersion Config.target_sdk
+        versionCode Releases.version_code
+        versionName Releases.version_name
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -26,8 +23,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility Config.java_version
+        targetCompatibility Config.java_version
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -37,55 +34,51 @@ android {
 dependencies {
 
     //AndroidX
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation Tools.multidex
+    implementation Design.appcompat
+
+    //implementation 'com.android.support:multidex:1.0.3'
+    implementation Tools.swiperefreshlayout
 
     //Design
     //You should not use the com.android.support and com.google.android.material dependencies in your app at the same time
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation Design.material
 
     //Kotlin
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.41'
-
-    //Rx-Java
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation Kotlin.core
+    implementation Kotlin.stdlib
 
     //Retrofit 2
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation Retrofit.retrofit
+    implementation Retrofit.converter_gson
+    implementation Retrofit.adapter_coroutines
+    implementation Retrofit.logging_interceptor
+
     //AppCompat
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-
-
+    implementation Design.appcompat
 
     //Download images
     //Picasso
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation Picasso.picasso
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation Glide.glide
+    kapt Glide.glide_compiler
     //Koil image download
     implementation("io.coil-kt:coil:0.9.2")
 
     //Koin for Android
-    implementation 'org.koin:koin-android:2.0.1'
-    implementation 'org.koin:koin-android-viewmodel:2.0.1'
+    implementation Koin.koin_android
+    implementation Koin.koin_view_model
 
     //Room
-    implementation 'androidx.room:room-runtime:2.2.0-alpha01'
-    kapt 'androidx.room:room-compiler:2.2.0-alpha01'
-    implementation 'androidx.room:room-ktx:2.2.0-alpha01'
+    implementation Room.runtime
+    kapt Room.compiler
+    implementation Room.room_ktx
 
     //Test
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation TestImpl.junit
+    androidTestImplementation TestImpl.runner
+    androidTestImplementation TestImpl.espresso
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.google.android.material:material:1.3.0'
