--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -7,6 +7,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    defaultConfig {
+        minSdkVersion Config.min_sdk
+    }
 }
 
 dependencies {
